public/styles.css
@font-face { font-family: comicate; src: url('fonts/comicate.ttf'); } 
@font-face { font-family: copenhagen; src: url('fonts/copenhagen.ttf'); } 
@font-face { font-family: mma; src: url('fonts/mma.ttf'); } 
@font-face { font-family: ethnocentric; src: url('fonts/ethnocentric.ttf'); } 

html {
    height: 100%;
    margin: 0;
    display: flex;
    flex-direction: column; /* stack children vertically */
    align-items: center;    /* center horizontally */
    background-color: rgb(13, 18, 20);
    background: linear-gradient(to right, #4db0cb 0%,rgb(13, 18, 20) calc((50vw - 250px)), rgb(13, 18, 20) calc((50vw + 250px)), #c57a40 100%);
    font-family: ethnocentric;
    color:#e0e0e0;
}
body button {
    font-family: ethnocentric;
    color:#e0e0e0;
}

#break{
    text-align: center;
    margin-top: 5vh;
    margin-bottom: 8vh;
}
#listHeader {
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left:0px;
  margin-right:0px;
  font-size: 2.5rem;
  font-family: ethnocentric;
  font-weight: 175;
  text-decoration: underline;
  text-decoration-thickness: 5px;
}

#cover {
    width: 500px;
    height: 500px;
    background-image:     
        linear-gradient(to right, rgba(13, 18, 20,1) 0%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(13, 18, 20,1) 100%),
        linear-gradient(to left, rgba(13, 18, 20,1) 0%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(13, 18, 20,1) 100%),
        linear-gradient(to bottom, rgba(13, 18, 20,1) 0%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(13, 18, 20,1) 100%),
        linear-gradient(to top, rgba(13, 18, 20,1) 0%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(13, 18, 20,1) 100%),
        url('assets/cover.jpg');
    background-size: 500px;
    
}

.container {
    text-align: center;
    background-image:     
        linear-gradient(to right, rgba(13, 18, 20,1) 0%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(13, 18, 20,1) 100%),
        linear-gradient(to left, rgba(13, 18, 20,1) 0%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(13, 18, 20,1) 100%),
        linear-gradient(to bottom, rgba(13, 18, 20,1) 0%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(13, 18, 20,1) 100%),
        linear-gradient(to top, rgba(13, 18, 20,1) 0%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(13, 18, 20,1) 100%),
        url('assets/techmono.jpg');
    background-repeat: repeat;
    padding: 30px 50px;
    border-radius: 10px;
    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
    width: 400px;
    height: auto;
    margin: 1vh auto;
}

.room {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 10px 0;
  padding: 8px 12px;
  border: 1px solid #ddd;
  border-radius: 6px;
  background-color: #18262b;
}

.room span {
  font-weight: 500;
}

button {
  cursor: pointer;
  padding: 6px 12px;
  border: none;
  border-radius: 5px;
  background-color: #007bff;
  font-weight: bold;
}
button:hover {
  background-color: #0056b3;
}

.joinBtn {
  background-color: #d70000;
}
.joinBtn:hover{
  background-color: #880000;
}

#addRoomBtn {
  margin-top: 20px;
  width: 100%;
  background-color: #4db0cb;
}
#addRoomBtn:hover{
  background-color: #306e7f;
}

#refreshRoomsBtn {
    margin-top:10px;
    width: 100%;
    background-color: #c57a40;
}
#refreshRoomsBtn:hover{
    background-color: #84512a;

}

/* Canvas styling */

#drawWidgetOuterWindow{
    height: 100vh;
    width: 500px;
    display: flex;
    align-items: center; 
    justify-content: center; 
    flex-direction: column;
}

#drawWidget {
    display: block !important;
    margin-bottom: 5vh;

    -webkit-mask-image: 
    linear-gradient(to top,    transparent, black 10%, black 90%, transparent),
    linear-gradient(to left,   transparent, black 10%, black 90%, transparent),
    linear-gradient(to bottom, transparent, black 10%, black 90%, transparent),
    linear-gradient(to right,  transparent, black 10%, black 90%, transparent);
  -webkit-mask-composite: destination-in;
  -webkit-mask-repeat: no-repeat;

  mask-image: 
    linear-gradient(to top,    transparent, black 10%, black 90%, transparent),
    linear-gradient(to left,   transparent, black 10%, black 90%, transparent),
    linear-gradient(to bottom, transparent, black 10%, black 90%, transparent),
    linear-gradient(to right,  transparent, black 10%, black 90%, transparent);
  mask-composite: intersect;
  mask-repeat: no-repeat;
}



.modal {
    display: none; /* hidden by default */
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,0.5);
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

/* Modal content */
.modal-content {
    background-color: #525453;
    padding: 20px 30px;
    border-radius: 10px;
    text-align: left;
    width: 300px;
}

.modal-content h2 {
  margin-top: 0;
}

.modal-content label {
  display: block;
  margin: 10px 0;
}

.modal-buttons {
  text-align: center;
  margin-top: 15px;
}


.modal-buttons button:first-child {
    background-color: #d70000;
}

.modal-buttons button:first-child:hover {
    background-color: #880000;
}

.modal-buttons button:not(:first-child) {
    background-color: #28a745;
    margin-left: 10px;
}
.modal-buttons button:not(:first-child):hover {
    background-color: #1e7e34;
}
#timerDisplay{
  font-size: 2rem; font-weight: bold; color: red; margin-top:10px; text-align:center;
}
#timerLabel{
  text-align:center;
}
#timerUI{
  margin-top: 3vh;
}
#drawingResults{
    height: 100vh;
    width: 500px;
    display: flex;
    align-items: center; 
    justify-content: center; 
    flex-direction: column;
}
#player1Label{
  margin-bottom: 2vh;
}
#player1Drawing{
 margin-bottom: 2vh;
}
#player2Drawing{
 margin-top: 2vh;
}
#player2Label{
 margin-top: 2vh;
}

#return {
  margin-top: 1vh;
  background-color: #d70000;
}
#return:hover{
  background-color: #880000;
}

*, *:before, *:after {
  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }


.m_scroll_arrows
{
  display: block;
  -ms-transform: rotate(45deg); /* IE 9 */
  -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
  transform: rotate(45deg);
   
  border-right: 2px solid white;
  border-bottom: 2px solid white;
  margin: 0 0 3px 1px;
  
  width: 5rem;
  height: 5rem;

  margin-left: auto;
  margin-right: auto;
}
.unu
{
  margin-top: -20px;
}

.unu, .doi, .trei
{
    -webkit-animation: mouse-scroll 1s infinite;
    -moz-animation: mouse-scroll 1s infinite;
    animation: mouse-scroll 1s infinite;
}

.doi, .trei{
  margin-top: -50px;
}

.unu
{
  -webkit-animation-delay: .1s;
  -moz-animation-delay: .1s;
  -webkit-animation-direction: alternate;
  
  animation-direction: alternate;
  animation-delay: alternate;
}

.doi
{
  -webkit-animation-delay: .2s;
  -moz-animation-delay: .2s;
  -webkit-animation-direction: alternate;
  
  animation-delay: .2s;
  animation-direction: alternate;
  
}

.trei
{
  -webkit-animation-delay: .3s;
  -moz-animation-delay: .3s;
  -webkit-animation-direction: alternate;
  
  animation-delay: .3s;
  animation-direction: alternate;
  margin-bottom: 20px;
}


@-webkit-keyframes mouse-scroll {

  0%   { opacity: 0;}
  50%  { opacity: .5;}
  100% { opacity: 1;}
}
@-moz-keyframes mouse-scroll {

  0%   { opacity: 0; }
  50%  { opacity: .5; }
  100% { opacity: 1; }
}
@-o-keyframes mouse-scroll {

  0%   { opacity: 0; }
  50%  { opacity: .5; }
  100% { opacity: 1; }
}
@keyframes mouse-scroll {

  0%   { opacity: 0; }
  50%  { opacity: .5; }
  100% { opacity: 1; }
}

